--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,6 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
-    "cross-env": "^7.0.3",
     "express-session": "^1.18.1",
     "helmet": "^8.1.0",
     "reflect-metadata": "^0.2.2",
@@ -63,7 +62,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "cross-env": "^7.0.3"
   },
   "jest": {
     "moduleFileExtensions": [
