feat: user 관련 CRUD API 완성

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -3,4 +3,4 @@ APP_PORT=8000
 DB_URL="mysql://root:abcd1234@localhost:3306/malgreem"
 IN_MEMORY_DB_URL="redis://default:@localhost:6379/0"
 SESSION_DB_URL="redis://default:@localhost:6379/1"
-SESSION_KEY="session_secret"
+SESSION_KEY="secret_key"
