--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,6 +1,6 @@
 APP_ENV=development
 APP_PORT=8000
 DB_URL="mysql://root:abcd1234@localhost:3306/malgreem"
-IN_MEMORY_DB_URL="redis://default:@localhost:6379/0"
+INMEMORY_DB_URL="redis://default:@localhost:6379/0"
 SESSION_DB_URL="redis://default:@localhost:6379/1"
 SESSION_KEY="secret_key"
