feat: favicon 추가

--- a/ai_image_server/requirements.txt
+++ b/ai_image_server/requirements.txt
@@ -1,8 +1,52 @@
-flask
-diffusers
-transformers
-torch
-accelerate
-pillow
-google-cloud-storage
-python-dotenv
+accelerate==1.8.1
+beautifulsoup4==4.13.4
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+deep-translator==1.11.4
+diffusers==0.34.0
+filelock==3.18.0
+Flask==3.1.1
+fsspec==2025.7.0
+google-api-core==2.25.1
+google-auth==2.40.3
+google-cloud-core==2.4.3
+google-cloud-storage==3.2.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+huggingface-hub==0.33.4
+idna==3.10
+importlib_metadata==8.7.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.6
+packaging==25.0
+pillow==11.3.0
+proto-plus==1.26.1
+protobuf==6.31.1
+psutil==7.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+python-dotenv==1.1.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+rsa==4.9.1
+safetensors==0.5.3
+soupsieve==2.7
+sympy==1.14.0
+tokenizers==0.21.2
+torch==2.7.1
+tqdm==4.67.1
+transformers==4.53.2
+typing_extensions==4.14.1
+urllib3==2.5.0
+Werkzeug==3.1.3
+zipp==3.23.0
