--- a/backend/.env.development
+++ b/backend/.env.development
@@ -4,7 +4,8 @@ APP_PORT=8000
 # INMEMORY_DB_URL="redis://default:@localhost:6379/0"
 # SESSION_DB_URL="redis://default:@localhost:6379/1"
 DB_URL="mysql://root:kweonminsungabcd1234@15.165.186.225:52622/malgreem"
-IMAGE_GEN_API_URL="http://localhost:8001"
+# IMAGE_GEN_API_URL="http://localhost:8001"
+IMAGE_GEN_API_URL="http://172.20.12.234:80"
 INMEMORY_DB_URL="redis://admin:Kweonminsung_1234@redis-16268.c340.ap-northeast-2-1.ec2.redns.redis-cloud.com:16268"
 SESSION_DB_URL="redis://admin:Kweonminsung_1234@redis-16268.c340.ap-northeast-2-1.ec2.redns.redis-cloud.com:16268"
 SESSION_KEY="secret_key"
